# easyqc

./: .flake8  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  conda_easyqc.yaml  easyqc.py  env_seisview.yaml  processing.py  pyproject.toml  requirements.txt  setup.py
dsp/: fourier.py  utils.py
src/easyqc/: easyqc.ui  gui.py  pgtools.py  qt.py  spectrogram.ui  view.py
src/easyqc/tests/: tests_gui.py  tests_model.py  tests_pgtools.py
tests/: test_fourier.py  test_processing.py
